--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <resources>
-    <string name="app_name">LocalisePrototype</string>
+  <string name="main.country">Select country</string>
+  <plurals name="Test">
+    <item quantity="one"></item>
+    <item quantity="other">English</item>
+  </plurals>
 </resources>
