--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <resources>
   <string name="main.country">Select country</string>
-  <string name="Test_key">Select country</string>
+  <string name="New_Android_Key">Select country</string>
   <plurals name="Test">
     <item quantity="one"></item>
     <item quantity="other">English</item>
