--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <resources>
+  <string name="index.placeholder" formatted="false">The editor has validations that are applied for every string that is saved. Try to translate this string without the %s placeholder and you will see %2s.</string>
   <string name="main.country">Select country</string>
-  <string name="New_Android_Key">Select country</string>
   <plurals name="Test">
     <item quantity="one"></item>
     <item quantity="other">English</item>
   </plurals>
+  <string name="New_Android_Key">Select country</string>
+  <string name="new_key_test">translation</string>
 </resources>
