--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
   </plurals>
   <string name="New_Android_Key">Select country</string>
   <string name="new_key_test">translation</string>
+  <string name="new_key_test2">translation2</string>
 </resources>
