--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,12 +3,15 @@
   <string name="index.placeholder" formatted="false">The editor has validations that are applied for every string that is saved. Try to translate this string without the %s placeholder and you will see %2s.</string>
   <string name="main.country">Select country</string>
   <plurals name="Test">
-    <item quantity="one"> %s test</item>
-    <item quantity="other">%s test</item>
+    <item quantity="one"></item>
+    <item quantity="other">English</item>
   </plurals>
   <string name="New_Android_Key">Select country</string>
-  <string name="new_key_test">translation</string>
-  <string` name="new_key_test2">translation</string>
-
-    <string name="new_key_test2">translation</string>
+  <string name="new_key_test">translation1</string>
+  <string name="new_key_test2">translation1</string>
+  <string name="testkey">translation1</string>
+  <string name="new_key_test_copy">translation1</string>
+  <string name="new_key_test2_copy">translation1</string>
+  <string name="mobile_key">Duplicate</string>
+  <string name="Android_key">test</string>
 </resources>
