--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
   <string name="index.placeholder" formatted="false">The editor has validations that are applied for every string that is saved. Try to translate this string without the %s placeholder and you will see %2s.</string>
   <string name="main.country">Select country</string>
   <plurals name="Test">
-    <item quantity="one"></item>
+    <item quantity="one">Test</item>
     <item quantity="other">English</item>
   </plurals>
   <string name="New_Android_Key">Select country</string>
@@ -13,4 +13,6 @@
   <string name="new_key_test_copy">translation1</string>
   <string name="new_key_test2_copy">translation1</string>
   <string name="mobile_key">Duplicate</string>
+  <string name="mobile_key">Duplicate</string>
+  <string name="test_pr">PR test</string>
 </resources>
