--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -16,4 +16,5 @@
   <string name="new_key_test2_copy">перевод</string>
   <string name="mobile_key"></string>
   <string name="test_pr"></string>
+  <string name="test_key_demo">тестовый ключ</string>
 </resources>
