--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
   <string name="new_key_test2_copy">translation1</string>
   <string name="mobile_key">Duplicate</string>
   <string name="test_pr">PR test</string>
+  <string name="test_key_demo">test key</string>
 </resources>
