--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
   <string name="mobile_key">Duplicate</string>
   <string name="test_pr">PR test</string>
   <string name="test_key_demo">test key</string>
+  <string name="new_key_for_demo">new key</string>
 </resources>
