--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -17,4 +17,8 @@
   <string name="mobile_key"></string>
   <string name="test_pr"></string>
   <string name="test_key_demo">тестовый ключ</string>
+  <string name="new_key_for_demo"></string>
+  <string name="test_key_demo_copy">тестовый ключ</string>
+  <string name="test"></string>
+  <string name="test_color"></string>
 </resources>
