--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,7 @@
   <string name="test_pr">PR test</string>
   <string name="test_key_demo">test key</string>
   <string name="new_key_for_demo">new key</string>
+  <string name="test_key_demo_copy"></string>
+  <string name="test"></string>
+  <string name="test_color">Color</string>
 </resources>
